Closed Bug 468400 Opened 17 years ago Closed 17 years ago

xpcshell-simple/test_places/unit/test_adaptive.js | *** TIMEOUT ***: The test timed out while polling database.

Categories

(Toolkit :: Places, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: MatsPalmgren_bugz, Assigned: mak)

References

Details

(Keywords: fixed1.9.1)

Attachments

(1 file, 3 obsolete files)

"Linux mozilla-central moz2-linux-slave08 dep unit test" Tinderbox orange: http://tinderbox.mozilla.org/showlog.cgi?log=Firefox/1228705679.1228708323.9266.gz#err0 TEST-UNEXPECTED-FAIL | ../../../../_tests/xpcshell-simple/test_places/unit/test_adaptive.js | test failed, see log ../../../../_tests/xpcshell-simple/test_places/unit/test_adaptive.js.log: >>>>>>> *** test pending *** test pending Test 0 same count, diff rank, same term; no search *** test finished *** running event loop Test 1 same count, diff rank, same term; no search *** exiting *** TEST-UNEXPECTED-FAIL | ../../../../_tests/xpcshell-simple/test_places/unit/test_adaptive.js | *** TIMEOUT ***: The test timed out while polling database. ==================== The only checkin for this build was http://hg.mozilla.org/mozilla-central/rev/f6aa0df95deb and it's very very unlikely to have caused this test failure, so I believe it's something wrong with the test itself, or with the Tinderbox host, or with the test framework.
Component: Testing → Places
Product: Core → Toolkit
QA Contact: testing → places
that's a random due to some timer bug
Blocks: 460119
Attached patch patch (obsolete) — Splinter Review
unluckily i cannot reproduce locally, but being aware of oldest timer issue with VM i can suspect the polling timeout could be not correctly set between tests, so we could end up calculating more than one test timeout. For now i suggest moving to count polling loops instead of a timeout, if that is still failing we could reopen and try increasing the values, or eventually re-evaluate the approach.
Assignee: nobody → mak77
Status: NEW → ASSIGNED
Attachment #353046 - Flags: review?(sdwilsh)
Attached patch correct patch (obsolete) — Splinter Review
sorry. that was the wrong patch
Attachment #353046 - Attachment is obsolete: true
Attachment #353047 - Flags: review?(sdwilsh)
Attachment #353046 - Flags: review?(sdwilsh)
Comment on attachment 353047 [details] [diff] [review] correct patch I think we should just add an observer topic when it's completed. It makes testing for correctness about a million times easier, and won't hurt us.
Attachment #353047 - Flags: review?(sdwilsh)
Attached patch patch (obsolete) — Splinter Review
this implements the notification, i've tried to make the class a bit more generic to be reused once we will add new async statements, but maybe you prefer a specialized class for the autocomplete. let me know.
Attachment #353047 - Attachment is obsolete: true
Attachment #353801 - Flags: review?(sdwilsh)
Comment on attachment 353801 [details] [diff] [review] patch Let's just make it specific please. It makes the code easier to read (and I'm not sure what else we'd have to use this for).
Attachment #353801 - Flags: review?(sdwilsh) → review-
for example i was thinking to things we actually do on lazy_add, like setPageTitle, we could use this to notify after setting the title async, would be ready to use.
(In reply to comment #8) > for example i was thinking to things we actually do on lazy_add, like > setPageTitle, we could use this to notify after setting the title async, would > be ready to use. I think until we figure out how exactly we'll want to do that, we should make this specific for our use case.
Attached patch patch v2Splinter Review
reverted back to be autocomplete only.
Attachment #353801 - Attachment is obsolete: true
Attachment #354141 - Flags: review?(sdwilsh)
Comment on attachment 354141 [details] [diff] [review] patch v2 >+NS_IMETHODIMP >+AutoCompleteStatementCallbackNotifier::HandleError(mozIStorageError *aError) >+{ >+ nsCAutoString warnMsg; >+ warnMsg.Append("An error occured while executing an async statement: "); >+ PRInt32 result; >+ aError->GetResult(&result); >+ warnMsg.Append(result); >+ warnMsg.Append(" "); >+ nsCAutoString message; >+ aError->GetMessage(message); >+ warnMsg.Append(message); >+ NS_WARNING(warnMsg.get()); Check return values or cast to void please (I know we don't do that everywhere, but we do it in some places, and I think for clarity of code we should start doing it in new code). r=sdwilsh
Attachment #354141 - Flags: review?(sdwilsh) → review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Attachment #354141 - Flags: approval1.9.1?
Comment on attachment 354141 [details] [diff] [review] patch v2 requesting approval, this solves a potential random test failure, but involves also toolkit code so it's not tests-only. Risk is low.
This testcase is failing on Fennec and after reading the code with mfinkle we were not sure why it is failing. Specifically test #3 is failing where the first returned search result is uri2 instead of uri1. Here is a reference to the test case that fails: http://mxr.mozilla.org/mozilla-central/source/toolkit/components/places/tests/unit/test_adaptive.js#246 Could I get some assistance with understanding how and why this is failing? There are a few other failures in the same test folder which I think are related.
in the same test folder, you mean some of the autocomplete tests?
specifically test_frecency.js and test_000_frecency.js have multiple tests in them that fail.
reopening as these tests are failing on Fennec and appear to be related to the same issue/fix.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
i think you should open a new bug specific for fennec issue instead, since this original issue is fixed on trunk.
ok, closing this bug and I have opened bug 482964 to track the specific failures on Fennec
Status: REOPENED → RESOLVED
Closed: 17 years ago17 years ago
Resolution: --- → FIXED
Comment on attachment 354141 [details] [diff] [review] patch v2 a191=beltzner
Attachment #354141 - Flags: approval1.9.1? → approval1.9.1+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: