Bug 468400 - xpcshell-simple/test_places/unit/test_adaptive.js | *** TIMEOUT ***: The test timed out while polling database, r=sdwilsh